--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
     testImplementation 'org.mockito:mockito-core:2.8.9'
 }
