--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.0'
     repositories {
         google()
         jcenter()
@@ -19,9 +19,34 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //VPI
+        maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+
+    //build
+    minSdkVersion = 16
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.2'
+
+    //3rd party
+    picassoVersion = '2.5.2'
+    circleImageViewVersion = '2.2.0'
+    viewPagerIndicatorVersion = '2.4.1'
+    daggerVersion = '2.13'
+
+    //android
+    supportLibraryVersion = '28.0.0'
+    constraintLayoutVersion = '1.0.2'
+    archLifecycleVersion = '1.0.3'
+    archLifecycleCompilerVersion = '1.1.0'
+    archLifecycleExtensionsVersion = '1.1.1'
+    roomVersion = '1.1.1'
+
 }
