--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
         <activity android:name=".list.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,7 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".list.DetailActivity">
-
+        </activity>
+        <activity android:name=".create.CreateActivity">
+        </activity>
+        <activity android:name=".detail.DetailActivity">
         </activity>
     </application>
 
